--- a/webui/templates/htmx/address.jinja2
+++ b/webui/templates/htmx/address.jinja2
@@ -82,7 +82,7 @@
                     {% endcall %}
                     {% call data_line("Estimated speed") %}
                         {% if speed != 0 %}
-                            {{ "%.2f" % speed }} <span data-tippy-content='commitments per second, also known as "p/s" or "s/s"'>c/s</span> (last {{ timespan }})
+                            {{ "%.2f" % speed }} <span data-tippy-content="Solutions per second, see FAQ for more info">s/s</span> (last {{ timespan }})
                         {% else %}
                             Not enough solutions during last day
                         {% endif %}
