--- a/webui/templates/htmx/index.jinja2
+++ b/webui/templates/htmx/index.jinja2
@@ -40,8 +40,8 @@
                 {% if not "DEBUG_SKIP_COINBASE" | get_env %}
                 <div class="cell large-3 ticker-cell">
                     <div class="grid-y ticker-cell-content">
-                        <div class="cell ticker-cell-title">Estimated proving capacity (15m)</div>
-                        <div class="cell auto ticker-cell-data">{{ network_speed | format_number | safe }}&nbsp;<span data-tippy-content='commitments per second, also known as "p/s" or "s/s"'>c/s</span></div>
+                        <div class="cell ticker-cell-title">Puzzle solving rate (15m)</div>
+                        <div class="cell auto ticker-cell-data">{{ network_speed | format_number | safe }}&nbsp;<span data-tippy-content="Solutions per second, see FAQ for more info">s/s</span></div>
                     </div>
                 </div>
                 {% endif %}
