--- a/webui/templates/htmx/index.jinja2
+++ b/webui/templates/htmx/index.jinja2
@@ -86,7 +86,7 @@
                         <td>{{ block.proof_target | format_number | safe }}</td>
                         <td>{{ block.coinbase_target | format_number | safe }}</td>
                         <td>{{ block.block_reward | format_aleo_credit | safe }}</td>
-                        <td>{{ (block.coinbase_reward // 2) | format_aleo_credit | safe }}</td>
+                        <td>{{ (block.coinbase_reward * 2 // 3) | format_aleo_credit | safe }}</td>
                         {% if not "DEBUG_SKIP_COINBASE" | get_env %}
                             <td>{{ block.partial_solution_count }}</td>
                         {% endif %}
