new testnet beta support

--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -118,6 +118,10 @@
 </div>
 <div class="container">
 <div id="htmx-body" class="htmx-indicator">
+<div class="content">
+    <div class="callout alert global-banner">
+    The explorer is still being updated to support the latest network changes. Some pages might not work correctly.
+    </div></div>
 {% block content %}{% endblock %}
 </div>
 <div class="footer-container">
