--- a/webui/templates/htmx/changelog.jinja2
+++ b/webui/templates/htmx/changelog.jinja2
@@ -4,6 +4,17 @@
 <div class="content">
     <h3>Changelog</h3>
 
+    <h5>2024-06-28</h5>
+    <ul>
+        <li>Support latest testnet beta version</li>
+        <li>New UI is under construction</li>
+    </ul>
+
+    <h5>2024-05-23</h5>
+    <ul>
+        <li>Support testnet beta</li>
+    </ul>
+
     <h5>2024-03-02</h5>
     <ul>
         <li>Added proper error page for internal server error</li>
