--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -14,15 +14,16 @@
                 "@type": "Person",
                 "name": "Haruka Ma"
             },
-            "url": "https://testnet3.aleoscan.io/",
-            "description": "Aleoscan is an open source Aleo explorer. Explore the Aleo blockchain, find information about blocks, transactions, validators, programs and more. Formerly known as Haruka's Aleo Explorer.",
+            "url": "https://testnet.aleoscan.io/",
+            "description": "AleoScan is an open source Aleo explorer. Explore the Aleo blockchain, find information about blocks, transactions, validators, programs and more. Formerly known as Haruka's Aleo Explorer.",
             "potentialAction": {
                 "@type": "SearchAction",
-                "target": "https://testnet3.aleoscan.io/search?q={search_term_string}",
+                "target": "https://testnet.aleoscan.io/search?q={search_term_string}",
                 "query-input": "required name=search_term_string"
             }
         }
     </script>
+    <meta name="description" content="AleoScan is an open source Aleo explorer. Explore the Aleo blockchain, find information about blocks, transactions, validators, programs and more. Formerly known as Haruka's Aleo Explorer.">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
