always populate original transaction id for rejected txs

--- a/webui/templates/htmx/changelog.jinja2
+++ b/webui/templates/htmx/changelog.jinja2
@@ -4,6 +4,11 @@
 <div class="content">
     <h3>Changelog</h3>
 
+    <h5>2024-06-30</h5>
+    <ul>
+        <li>Support searching for any rejected transactions with original transaction ID</li>
+    </ul>
+
     <h5>2024-06-28</h5>
     <ul>
         <li>Support latest testnet beta version</li>
