nah the banner is too ugly

--- a/webui/templates/htmx/block.jinja2
+++ b/webui/templates/htmx/block.jinja2
@@ -15,10 +15,13 @@
         {% call data_line("Block hash") %}
             <span class="mono">{{ block.block_hash }}</span>
         {% endcall %}
+        {% call data_line("Epoch") %}
+            {{ block.height // 360 }} <span class="note">{{ block.height % 360 }} / 360</span>
+        {% endcall %}
         {% call data_line("Timestamp", '<i class="fa-regular fa-circle-question" data-tippy-content="Timestamp property in block, which is earlier than block generation time"></i>') %}
             {{ block.header.metadata.timestamp | format_time | safe }}
         {% endcall %}
-        {% call data_line("Validators", '<i class="fa-regular fa-circle-question" data-tippy-content="If the validator has participated in this block"></i>') %}
+        {% call data_line("Validators", '<i class="fa-regular fa-circle-question" data-tippy-content="If the block contains signature from the validator"></i>') %}
             <div class="block-validator">
                 {% for v in all_validators %}
                     {% if v.address in validators %}
