--- a/webui/templates/htmx/blocks.jinja2
+++ b/webui/templates/htmx/blocks.jinja2
@@ -15,6 +15,7 @@
                 <thead>
                 <tr>
                     <th>Height</th>
+                    <th>Epoch</th>
                     <th>Timestamp</th>
                     <th>Transactions</th>
                     <th>Proof target</th>
@@ -28,6 +29,7 @@
                 {% for block in blocks %}
                     <tr>
                         <td><a href="/block?h={{ block.height }}">{{ block.height | format_number | safe }}</a></td>
+                        <td>{{ block.height // 360 }} <span class="note">{{ block.height % 360 }} / 360</span></td>
                         <td>{{ block.timestamp | format_time | safe }}</td>
                         <td>{{ block.transaction_count }}</td>
                         <td>{{ block.proof_target | format_number | safe }}</td>
