--- a/webui/templates/htmx/index.jinja2
+++ b/webui/templates/htmx/index.jinja2
@@ -19,8 +19,8 @@
                 </div>
                 <div class="cell large-auto ticker-cell">
                     <div class="grid-y ticker-cell-content">
-                        <div class="cell ticker-cell-title">Timestamp</div>
-                        <div class="cell auto ticker-cell-data timestamp-font-size">{{ latest_block.header.metadata.timestamp | format_time | safe }}</div>
+                        <div class="cell ticker-cell-title">Latest epoch</div>
+                        <div class="cell auto ticker-cell-data">{{ latest_block.height // 360 }}&nbsp;<span class="ticker-cell-data-note">{{ latest_block.height % 360 }} / 360</span></div>
                     </div>
                 </div>
                 <div class="cell large-auto ticker-cell">
@@ -66,6 +66,7 @@
                 <thead>
                 <tr>
                     <th>Height</th>
+                    <th>Epoch</th>
                     <th>Timestamp</th>
                     <th>Transactions</th>
                     <th>Proof target</th>
@@ -81,6 +82,7 @@
                 {% for block in recent_blocks %}
                     <tr>
                         <td><a href="/block?h={{ block.height }}">{{ block.height | format_number | safe }}</a></td>
+                        <td>{{ block.height // 360 }} <span class="note">{{ block.height % 360 }} / 360</span></td>
                         <td>{{ block.timestamp | format_time | safe }}</td>
                         <td>{{ block.transaction_count }}</td>
                         <td>{{ block.proof_target | format_number | safe }}</td>
