--- a/webui/templates/htmx/changelog.jinja2
+++ b/webui/templates/htmx/changelog.jinja2
@@ -4,6 +4,12 @@
 <div class="content">
     <h3>Changelog</h3>
 
+    <h5>2024-07-01</h5>
+    <ul>
+        <li>Proper support of async execution model</li>
+        <li>Add back block epoch display for puzzle solving rate observation</li>
+    </ul>
+
     <h5>2024-06-30</h5>
     <ul>
         <li>Support searching for any rejected transactions with original transaction ID</li>
