add incentive dashboard

--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -84,7 +84,7 @@
                 <li>
                     <a href="#">Proving</a>
                     <ul class="menu">
-                        <li><a href="/leaderboard">Leaderboard</a></li>
+                        <li><a href="/incentive">Incentive dashboard</a></li>
                         <li><a href="/calc">Calculator</a></li>
                     </ul>
                 </li>
