--- a/webui/templates/calc.jinja2
+++ b/webui/templates/calc.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}Proving Calculator - Haruka's Aleo Mining Pool{% endblock %}
+{% block title %}Proving Calculator - AleoScan{% endblock %}
 
 {% block content %}
 
