--- a/webui/templates/htmx/address_solution.jinja2
+++ b/webui/templates/htmx/address_solution.jinja2
@@ -17,7 +17,7 @@
                     <th>Block</th>
                     <th>Epoch</th>
                     <th>Timestamp</th>
-                    <th>Nonce</th>
+                    <th>counter</th>
                     <th>Target / Total</th>
                     <th>Reward</th>
                 </tr>
@@ -28,7 +28,7 @@
                         <td><a href="/block?h={{ solution.height }}">{{ solution.height }}</a></td>
                         <td>{{ solution.height // 256 }}</td>
                         <td>{{ solution.timestamp | format_time | safe }}</td>
-                        <td>{{ solution.nonce }}</td>
+                        <td>{{ solution.counter }}</td>
                         <td>{{ solution.target }}<span class="note"> / {{ solution.target_sum }}</span></td>
                         <td>{{ solution.reward | format_aleo_credit | safe }}</td>
                     </tr>
