--- a/webui/templates/htmx/incentive.jinja2
+++ b/webui/templates/htmx/incentive.jinja2
@@ -61,29 +61,34 @@
     </div>
 
 
-<script id="content-script" hx-swap-oob="true">
+<script>
 
-  function update_countdown() {
-    if (document.getElementById("countdown") === null) {
-      clearInterval(x);
-      return;
+  function init() {
+    function update_countdown() {
+      if (document.getElementById("countdown") === null) {
+        clearInterval(x);
+        return;
+      }
+      const now = new Date().getTime();
+      const distance = countDownDate - now;
+      const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+      const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+      const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+      const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+      document.getElementById("countdown").innerHTML = days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
+      if (distance < 0) {
+        clearInterval(x);
+        document.getElementById("countdown").innerHTML = "EXPIRED";
+      }
     }
-    const now = new Date().getTime();
-    const distance = countDownDate - now;
-    const days = Math.floor(distance / (1000 * 60 * 60 * 24));
-    const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-    const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-    const seconds = Math.floor((distance % (1000 * 60)) / 1000);
-    document.getElementById("countdown").innerHTML = days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
-    if (distance < 0) {
-      clearInterval(x);
-      document.getElementById("countdown").innerHTML = "EXPIRED";
-    }
+
+    countDownDate = new Date(1721059200 * 1000).getTime();
+    x = setInterval(update_countdown, 1000);
+    update_countdown();
   }
-  countDownDate = new Date(1721059200 * 1000).getTime();
-  x = setInterval(update_countdown, 1000);
-  update_countdown();
 
+  document.addEventListener("DOMContentLoaded", init);
+  document.addEventListener('htmx:load', init);
 
 
 </script>
