--- a/webui/templates/htmx/incentive.jinja2
+++ b/webui/templates/htmx/incentive.jinja2
@@ -86,9 +86,7 @@
     x = setInterval(update_countdown, 1000);
     update_countdown();
   }
-
-  document.addEventListener("DOMContentLoaded", init);
-  document.addEventListener('htmx:load', init);
+  init()
 
 
 </script>
