--- a/webui/templates/htmx/changelog.jinja2
+++ b/webui/templates/htmx/changelog.jinja2
@@ -4,6 +4,17 @@
 <div class="content">
     <h3>Changelog</h3>
 
+    <h5>2024-07-03</h5>
+    <ul>
+        <li>Add incentive dashboard</li>
+        <li>Accept incoming connections to node scanner</li>
+    </ul>
+
+    <h5>2024-07-02</h5>
+    <ul>
+        <li>Show aborted solutions and transactions in block</li>
+    </ul>
+
     <h5>2024-07-01</h5>
     <ul>
         <li>Proper support of async execution model</li>
