solution_id save &display

--- a/webui/templates/htmx/block.jinja2
+++ b/webui/templates/htmx/block.jinja2
@@ -159,6 +159,7 @@
                         <td>Counter</td>
                         <td>Target / Total</td>
                         <td>Reward</td>
+                        <td>SolutionID</td>
                     </tr>
                     </thead>
                     <tbody>
@@ -168,6 +169,7 @@
                         <td><span class="mono">{{ partial_solution.counter }}</span></td>
                         <td>{{ partial_solution.target | format_number | safe }}<span class="note"> / {{ target_sum | format_number | safe }}</span></td>
                         <td>{{ partial_solution.reward | format_aleo_credit | safe }}</td>
+                        <td> {{ partial_solution.solution_id }}</td>
                     </tr>
                     {% endfor %}
                     </tbody>
