--- a/webui/templates/htmx/address.jinja2
+++ b/webui/templates/htmx/address.jinja2
@@ -145,6 +145,7 @@
                         <th>Block</th>
                         <th>Epoch</th>
                         <th>Timestamp</th>
+                        <th>Solution ID</th>
                         <th>Counter</th>
                         <th>Target / Total</th>
                         <th>Reward</th>
@@ -156,6 +157,7 @@
                             <td><a href="/block?h={{ solution.height }}">{{ solution.height | format_number | safe }}</a></td>
                             <td>{{ solution.height // 256 }}</td>
                             <td>{{ solution.timestamp | format_time | safe }}</td>
+                            <td><span class="mono">{{ solution.solution_id }}</span></td>
                             <td>{{ solution.counter }}</td>
                             <td>{{ solution.target | format_number | safe }}<span class="note"> / {{ solution.target_sum | format_number | safe }}</span></td>
                             <td>{{ solution.reward | format_aleo_credit | safe }}</td>
