update incentive result

--- a/webui/templates/htmx/incentive.jinja2
+++ b/webui/templates/htmx/incentive.jinja2
@@ -15,6 +15,7 @@
         <div class="callout success">
             The incentive period for testnet beta has ended.
         </div>
+        <h6>Total testnet Aleo credits rewarded during incentive period: {{ total_credit | format_aleo_credit | safe }} Aleo credits </h6><br>
     {% else %}
         <div class="callout warning">
             This dashboard is unofficial. The data might be inaccurate.
