add status page

--- a/webui/templates/macros.jinja2
+++ b/webui/templates/macros.jinja2
@@ -108,6 +108,7 @@
                 The explorer is out of sync. The last synced block is {{ sync_info.relative_time }}.
             {% endif %}
             Current block height: explorer: {{ sync_info.explorer_height }} / node: {{ sync_info.node_height }} / ref: {{ sync_info.reference_height }}
+            <a href="https://status.aleoscan.io/">Status Page</a>
         </div>
     </div>
 {% else %}
