--- a/webui/templates/htmx/address_solution.jinja2
+++ b/webui/templates/htmx/address_solution.jinja2
@@ -7,7 +7,7 @@
             <h3>Solutions from {{ address_trunc }}</h3>
         </div>
 
-        <div id="blocks">
+        <div id="blocks" class="table-wrap">
 
             {{ nav(page, total_pages, "/address_solution?a=" + address + "&") }}
 
