--- a/webui/templates/htmx/index.jinja2
+++ b/webui/templates/htmx/index.jinja2
@@ -60,7 +60,7 @@
             </div>
         </div>
 
-        <div id="recent-blocks">
+        <div id="recent-blocks" class="table-wrap">
             <h4>Recent Blocks</h4>
             <table class="unstriped">
                 <thead>
