--- a/webui/templates/htmx/program.jinja2
+++ b/webui/templates/htmx/program.jinja2
@@ -130,7 +130,7 @@
                     <pre>{{ source }}</pre>
                 </div>
 
-                <div class="tabs-panel" id="transitions">
+                <div class="tabs-panel table-wrap" id="transitions">
                     <table id="transitions-table" class="unstriped">
                         <thead>
                         <tr>
