--- a/webui/templates/htmx/transaction.jinja2
+++ b/webui/templates/htmx/transaction.jinja2
@@ -124,7 +124,7 @@
         {% endif %}
         </ul>
 
-        <div class="tabs-content" data-tabs-content="transaction-tabs">
+        <div class="tabs-content table-wrap" data-tabs-content="transaction-tabs">
             <div class="tabs-panel is-active" id="transitions">
                 {% if type == "Deploy" %}<h4>Fee transition</h4>{% endif %}
                 <table id="transitions-table" class="unstriped">
