--- a/webui/templates/htmx/validators.jinja2
+++ b/webui/templates/htmx/validators.jinja2
@@ -7,7 +7,7 @@
             <h3>Validators</h3>
         </div>
 
-        <div id="blocks">
+        <div id="blocks" class="table-wrap">
 
             {{ nav(page, total_pages, "/validators?") }}
 
