--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -83,7 +83,7 @@
                 <li>
                     <a href="#">Proving</a>
                     <ul class="menu">
-                        <li><a href="/incentive">Incentive dashboard</a></li>
+{#                        <li><a href="/incentive">Incentive dashboard</a></li>#}
                         <li><a href="/calc">Calculator</a></li>
                     </ul>
                 </li>
