update participation rate period and genesis block

--- a/webui/templates/htmx/index.jinja2
+++ b/webui/templates/htmx/index.jinja2
@@ -53,7 +53,7 @@
                 </div>
                 <div class="cell large-3 ticker-cell">
                     <div class="grid-y ticker-cell-content">
-                        <div class="cell ticker-cell-title">Validator participation rate (1h)</div>
+                        <div class="cell ticker-cell-title">Validator participation rate (5m)</div>
                         <div class="cell auto ticker-cell-data">{{ "%0.2f" | format(participation_rate * 100) }}%</div>
                     </div>
                 </div>
