fix remote height fetching and limit calculator solution count

--- a/webui/templates/htmx/calc.jinja2
+++ b/webui/templates/htmx/calc.jinja2
@@ -45,7 +45,7 @@
         </p>
         <br>
         <p class="note">
-            * Live data calculated from all {{ total_solutions }} solutions submitted to the network.
+            * Live data calculated from last 10,000 solutions submitted to the network.
         </p>
     </div>
 
